this is the modern navBar via a bug that is overflow problem.

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,68 +8,171 @@
 
 @layer components {
 
-    .top-menu-links {
-        @apply float-left align-middle text-gray-200 text-center px-16 py-8 text-3xl no-underline font-normal hover:bg-green-200 hover:text-gray-800
-      }
-      
-      a.active {
-        @apply bg-green-200 text-gray-800 
-      }
+  nav {
+    min-height: 8vh;
+    font-family: 'Poppins', sans-serif;
+    @apply flex justify-around items-center bg-gray-700;
+  }
 
-      .header-container {
-        background-image: url('img/header.jpg');
-        background-size:cover;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-      
-      .header {
-        background-color: rgba(0, 0, 0, .3);
-      }
-      
-      .product-img {
-        height: 40rem;
-        width: 70rem;
-        object-fit: cover;
-        overflow: hidden;
-        @apply  cursor-pointer p-1 ;
-      }
-      
-      .add-to-cart-btn{
-        @apply bg-green-200 text-2xl font-medium w-full p-5 mt-5 border-2 border-green-700 hover:bg-green-400;
-      }
-      
-      .price {
-        @apply bg-green-200 text-black text-3xl p-3 m-3 ml-0 rounded-3xl font-bold float-right;
-      }
-      
-      .line-through-price {
-        @apply text-black text-2xl p-3 my-3 mr-0 rounded-3xl line-through font-medium float-right;
-      }
-      
-      .cone {
-        @apply bg-gray-100 text-black text-xl p-3 m-3 ml-0 rounded-3xl font-medium float-left cursor-pointer;
-      }
-      
-      .card-container {
-        @apply max-w-3xl  shadow-2xl hover:bg-gray-50 mx-auto my-5;
-      }
-      
-      .product-header {
-        @apply p-3 m-3 mt-0 text-5xl font-medium cursor-pointer overflow-ellipsis overflow-hidden line-clamp-1;
-      }
-      
-      .product-details {
-        @apply text-black text-2xl font-medium mx-5 text-left overflow-ellipsis overflow-hidden line-clamp-4;
-      }
-      
-      .frozen {
-        @apply bg-blue-200 text-black text-xl p-3 m-3 ml-3 rounded-3xl font-medium float-left cursor-pointer;
-      }
-      
-      .product-type {
-        @apply text-black text-xl p-3 m-3 ml-0 rounded-3xl font-medium float-left cursor-pointer;
-      }
+  .logo {
+    @apply text-blue-100 uppercase tracking-widest text-3xl font-bold;
+  }
+
+  .nav-links {
+    width: 40%;
+    @apply flex justify-around;
+  }
+
+  .nav-links li {
+     
+   @apply list-none hover:bg-green-900 text-center;
+
+  }
+
+  .nav-links .active {
+   @apply bg-green-900;
+  }
+
+  .nav-links a {
+    @apply text-green-200 no-underline tracking-wider font-medium text-2xl;
+  }
+
+  .burger {
+    display: none;
+  }
+
+  .burger div {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 5px;
+    transition: all 0.3s ease;
+  }
+
+  @media screen and (max-width:1025px) {
+    * {
+      overflow-x: hidden;
+    }
+  }
+
+  @media screen and (max-width:1024px) {
+    * {
+      overflow-x: hidden;
+    }
+
+    .nav-links {
+      width: 60%;
+      right: 0px;
+      min-height: 92vh;
+      top: 8vh;
+      width: 50%;
+      transform: translateX(100%);
+      transition: transform 0.5s ease-in;
+
+      @apply bg-gray-700 absolute flex flex-col items-stretch;
+    }
+
+    .nav-links li {
+      opacity: 0;
+      @apply hover:bg-green-900 text-center;
+
+    }
+
+    .burger {
+      display: block;
+    }
+  }
+
+  .nav-active {
+    transform: translateX(0%);
+
+  }
+
+
+  .toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+
+  .toggle .line2 {
+    opacity: 0;
+  }
+
+  .toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+
+
+
+
+.header-container {
+  background-image: url('img/header.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
+.header {
+  background-color: rgba(0, 0, 0, .3);
+}
+
+.product-img {
+  height: 40rem;
+  width: 70rem;
+  object-fit: cover;
+  overflow: hidden;
+  @apply cursor-pointer p-1;
+}
+
+.add-to-cart-btn {
+  @apply bg-green-200 text-2xl font-medium w-full p-5 mt-5 border-2 border-green-700 hover:bg-green-400;
+}
+
+.price {
+  @apply bg-green-200 text-black text-3xl p-3 m-3 ml-0 rounded-3xl font-bold float-right;
+}
+
+.line-through-price {
+  @apply text-black text-2xl p-3 my-3 mr-0 rounded-3xl line-through font-medium float-right;
+}
+
+.cone {
+  @apply bg-gray-100 text-black text-xl p-3 m-3 ml-0 rounded-3xl font-medium float-left cursor-pointer;
+}
+
+.card-container {
+  @apply max-w-3xl shadow-2xl hover:bg-gray-50 mx-auto my-5;
+}
+
+.product-header {
+  @apply p-3 m-3 mt-0 text-5xl font-medium cursor-pointer overflow-ellipsis overflow-hidden line-clamp-1;
+}
+
+.product-details {
+  @apply text-black text-2xl font-medium mx-5 text-left overflow-ellipsis overflow-hidden line-clamp-4;
+}
+
+.frozen {
+  @apply bg-blue-200 text-black text-xl p-3 m-3 ml-3 rounded-3xl font-medium float-left cursor-pointer;
+}
+
+.product-type {
+  @apply text-black text-xl p-3 m-3 ml-0 rounded-3xl font-medium float-left cursor-pointer;
+}
+
+}
+
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0px)
+  }
+
+}
